post, update and delete fonctions are added
